Removed obsolete maven-plugin-testing-harness dependency.